# auto-drc

./: pyproject.toml
docs/01-analysis/: 00-requirements-summary.md  01-value-propositions.md  02-aaa-framework.md  03-network-effects.md  04-stakeholder-analysis.md  05-technical-architecture.md  06-security-cia-triad.md  07-scenario-critique.md
docs/02-plans/: 00-poc-roadmap.md  01-architecture-plan.md
instructions/01-analysis/: 00-initial-specs.md
src/velus/docs/user-flows/: 00-overview.md  01-join-network.md  05-task-receive.md  07-task-create.md
todos/active/: 000-master.md  001-foundation.md  002-network.md  003-data-layer.md  004-ai-agents.md  005-frontend.md  006-integration.md  007-testing.md
